顧客情報詳細情報取得処理修正

--- a/fcm/clients/templates/clients/table.html
+++ b/fcm/clients/templates/clients/table.html
@@ -16,7 +16,7 @@
         {% if client_list %}
             {% for client in client_list %}
                 <tr>
-                    <td>{{ client.name }}</td>
+                    <td><a href="{% url 'clients:detail' client.id %}">{{ client.name }}</a></td>
                     <td>{{ client.session }}</td>
                     <td>{{ client.session_start_end }}</td>
                     <td>{{ client.code }}</td>
