--- a/fcm/clients/templates/clients/detail.html
+++ b/fcm/clients/templates/clients/detail.html
@@ -13,6 +13,9 @@
             <th>HandlInst</th>
             <th>LimitType</th>
             <th>OrderLimit</th>
+            <th>DISC</th>
+            <th>DMA</th>
+            <th>DSA</th>
         </tr>
         {% if limits %}
             {% for limit in limits %}
@@ -21,6 +24,9 @@
                     <td>{{ limit.handlinst }}</td>
                     <td>{{ limit.limit_type }}</td>
                     <td>{{ limit.order_limit }}</td>
+                    <td>{% if limit.is_disc %}○{% endif %}</td>
+                    <td>{% if limit.is_dma %}○{% endif %}</td>
+                    <td>{% if limit.is_dsa %}○{% endif %}</td>
                 </tr>
             {% endfor %}
         {% endif %}
