--- a/fcm/clients/templates/clients/table.html
+++ b/fcm/clients/templates/clients/table.html
@@ -2,25 +2,36 @@
 
 {% block title %}Client Table{% endblock %}
 
+{% block head %}
+    <script type="text/javascript">
+        'use strict';
+        $(() => $('#client-table').DataTable());
+    </script>
+{% endblock %}
+
 {% block contents %}
-    <table border="1">
-        <tr>
-            <th>name</th>
-            <th>session</th>
-            <th>session_start_end</th>
-            <th>code</th>
-            <th>products</th>
-        </tr>
-        {% if client_list %}
-            {% for client in client_list %}
-                <tr>
-                    <td><a href="{% url 'clients:detail' client.id %}">{{ client.name }}</a></td>
-                    <td>{{ client.session }}</td>
-                    <td>{{ client.session_start_end }}</td>
-                    <td>{{ client.code }}</td>
-                    <td>{{ client.products }}</td>
-                </tr>
-            {% endfor %}
-        {% endif %}
+    <table id="client-table" border="1">
+        <thead>
+            <tr>
+                <th>name</th>
+                <th>session</th>
+                <th>session_start_end</th>
+                <th>code</th>
+                <th>products</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% if client_list %}
+                {% for client in client_list %}
+                    <tr>
+                        <td><a href="{% url 'clients:detail' client.id %}">{{ client.name }}</a></td>
+                        <td>{{ client.session }}</td>
+                        <td>{{ client.session_start_end }}</td>
+                        <td>{{ client.code }}</td>
+                        <td>{{ client.products }}</td>
+                    </tr>
+                {% endfor %}
+            {% endif %}
+        </tbody>
     </table>
 {% endblock %}
