JQueryで適当にスタイル適用

--- a/fcm/clients/templates/clients/detail.html
+++ b/fcm/clients/templates/clients/detail.html
@@ -6,6 +6,12 @@
     <script type="text/javascript">
         'use strict';
         $(() => $("div#contents-title").css("border", "3px solid green"));
+        $(() => {
+            $('#detail-table th,#detail-table td').hover(
+                function() {$(this).css('background', '#CCFF99')}, // mouse entered
+                function() {$(this).css('background', '')} // mouse leave
+            );
+        });
     </script>
     <script type="text/javascript">
         'use strict';
