カラムの表示非表示設定のためのButtonPluginの導入
・実装してみたが、カラムごとに追加した検索行が非表示にならないバグがある
・不要なjs, cssの削除も実施

--- a/fcm/clients/templates/clients/table.html
+++ b/fcm/clients/templates/clients/table.html
@@ -7,7 +7,12 @@
     'use strict';
     $(function() {
         // DataTable
-        let table = $('#client-table').DataTable();
+        let table = $('#client-table').DataTable({
+            dom: 'lBfrtip',
+            buttons: [
+                'columnsToggle',
+            ],
+        });
 
         // Apply the search to every column
         let searchRow = $('<tr></tr>');
