ColumnChooserを作成したので、不要となったボタンや処理を削除

--- a/fcm/clients/templates/clients/table.html
+++ b/fcm/clients/templates/clients/table.html
@@ -22,66 +22,39 @@
     }
 
     $(function() {
-        let decorateTable = new Promise(function(resolve, reject) {
-            // DataTable
-            let table = $('#client-table').DataTable({
-                dom: 'lBfrtip',
-                buttons: [
-                    'columnsToggle',
-                ],
+        // DataTable
+        let table = $('#client-table').DataTable();
+
+        // Apply the search to every column
+        let searchRow = $('<tr></tr>');
+        table.columns().every(function() {
+            let title = this.header().innerHTML;
+            let search = $('<input>', {
+                type: "text",
+                placeholder: "Search " + title,
             });
 
-            // Apply the search to every column
-            let searchRow = $('<tr></tr>');
-            table.columns().every(function() {
-                let title = this.header().innerHTML;
-                let search = $('<input>', {
-                    type: "text",
-                    placeholder: "Search " + title,
-                });
+            let that = this;
+            search.on('keyup change clear', function() {
+                // get search method
+                let isRegex = ($('div#search-method input[name=searchMethod]:checked').val() === 'regex');
 
-                let that = this;
-                search.on('keyup change clear', function() {
-                    // get search method
-                    let isRegex = ($('div#search-method input[name=searchMethod]:checked').val() === 'regex');
-
-                    if (that.search() !== this.value) {
-                        that
-                            .search(this.value, isRegex)
-                            .draw();
-                    }
-                });
-
-                // Append to searchRow
-                searchRow
-                    .append($('<th></th>')
-                        .attr('id', 'search-' + title)
-                        .append(search));
+                if (that.search() !== this.value) {
+                    that
+                        .search(this.value, isRegex)
+                        .draw();
+                }
             });
 
-            // Append searchRow to the top of the header
-            $('#client-table thead').prepend(searchRow);
-
-            resolve('Table decorated');
+            // Append to searchRow
+            searchRow
+                .append($('<th></th>')
+                    .attr('id', 'search-' + title)
+                    .append(search));
         });
 
-        decorateTable.then(function(result) {
-            // Add event listener to columns toggle buttons to show/hide search row
-            // because this manually created row is not shown/hidden by default buttons action
-            $('div.dt-buttons .buttons-columnVisibility').each(function(idx, elem) {
-                let colName = $(elem).text();
-                $(elem)
-                    .on('click', function(event) {
-                        let eventElem = $(event.target);
-                        let tag = eventElem.prop('tagName');
-                        // Clicked element is either button or span inside the button
-                        // But a is used in IE instead of button!
-                        let btn = (tag === 'BUTTON' || tag === 'A') ? eventElem : eventElem.parent('button, a');
-                        let display = btn.hasClass('active') ? '' : 'none';
-                        updateSearchRowVisibility(colName, display, true);
-                    });
-            });
-        });
+        // Append searchRow to the top of the header
+        $('#client-table thead').prepend(searchRow);
     });
 
     function openColumnChooser() {
