リロードやページの移動でフィルタ設定がクリアされることがないようにした

--- a/fcm/clients/templates/clients/table.html
+++ b/fcm/clients/templates/clients/table.html
@@ -37,7 +37,9 @@
         {% endfor %}
 
         // DataTable
-        let table = $('#client-table').DataTable();
+        let table = $('#client-table').DataTable({
+            stateSave: true
+        });
 
         // Apply the search to every column
         table.columns().every(function() {
